--- a/Index.html
+++ b/Index.html
@@ -1,32 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
-	<title> Test </title>
-	<Link href="styles/main.css" rel="stylesheet" type="text/css" />
-	</head>
-	
-	<body>
-		
-		<header>
-			<nav>
-				<h1> <strong>Hello </strong><em>World </em> </h1>
-				<ul>
-					<li class="sel"> <strong>Home</strong></li>
-					<li><a href="page2.html">About</a></li>
-					<li><a href="page3.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		
-		<div class="row">
-		<div class="col"> col1 </div>
-		<div class="col"> col2 </div>
-		<div class="col"> col3 </div>
-		<div class="col"> col1 </div>
-		<div class="col"> col2 </div>
-		<div class="col"> col3 </div>
-
-		
-		<footer> @2018 test site </footer>
-	</body>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
 </html>
