--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1> Hello World!</h1>
-<p> I'm alive </p>
-</body>
+	<head>
+		<title> Home </title>
+		<Link href="styles/main.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
+		<h1> Hello World!</h1>
+		<p> I'm alive </p>
+	</body>
 </html>
