--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -2,18 +2,18 @@
 <html>
 	<Link href="styles/main.css" rel="stylesheet" type="text/css" />
 	<head>
-		<title> Home </title>
+		<title> Projects </title>
 	</head>
 	<body>
 		<nav>
 			<h1> Hello World!</h1>
 			<ul>
-				<li> Home </li>
-				<li> <a href="pages/About.html">Two</a> </li>
-				<li> <a href="pages/Projects.html">Three</a> </li>
+				<li> <a href="index.html">Home</a> </li>
+				<l> <a href="pages/About.html">Two</a> </li>
+				<li> Three </li>
 			</ul>
 		</nav>
 		
-		<p> I'm alive </p>
+		<p> I'm still sorta alive </p>
 	</body>
 </html>
