--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 			<h1> Hello World!</h1>
 			<ul>
 				<li> Home </li>
-				<li> <a href="pages/About.html">Two</a> </li>
-				<li> <a href="pages/Projects.html">Three</a> </li>
+				<li> <a href="About.html">Two</a> </li>
+				<li> <a href="Projects.html">Three</a> </li>
 			</ul>
 		</nav>
 		
