--- a/pages/About.html
+++ b/pages/About.html
@@ -10,7 +10,7 @@
 			<ul>
 				<li> <a href="index.html">Home</a> </li>
 				<li> Two </li>
-				<li> <a href="pages/Projects.html">Three</a> </li>
+				<li> <a href="Projects.html">Three</a> </li>
 			</ul>
 		</nav>
 		
