--- a/pages/Projects.html
+++ b/pages/Projects.html
@@ -9,7 +9,7 @@
 			<h1> Hello World!</h1>
 			<ul>
 				<li> <a href="index.html">Home</a> </li>
-				<l> <a href="pages/About.html">Two</a> </li>
+				<l> <a href="About.html">Two</a> </li>
 				<li> Three </li>
 			</ul>
 		</nav>
