Layout basics placeholder content

--- a/About.html
+++ b/About.html
@@ -5,14 +5,14 @@
 		<title> About </title>
 	</head>
 	<body>
-		<nav>
-			<h1> Hello World!</h1>
+		<div class="NavigationBar">
+			<h1> Contacts! </h1>
 			<ul>
 				<li> <a href="index.html">Home</a> </li>
-				<li> Two </li>
-				<li> <a href="Projects.html">Three</a> </li>
+				<li> Contacts </li>
+				<li> <a href="Projects.html">Projects</a> </li>
 			</ul>
-		</nav>
+		</div>
 		
 		<p> I'm still alive </p>
 	</body>
