--- a/Projects.html
+++ b/Projects.html
@@ -5,14 +5,14 @@
 		<title> Projects </title>
 	</head>
 	<body>
-		<nav>
-			<h1> Hello World!</h1>
+		<div class="NavigationBar">
+			<h1> My Projects </h1>
 			<ul>
 				<li> <a href="index.html">Home</a> </li>
-				<l> <a href="About.html">Two</a> </li>
-				<li> Three </li>
+				<li> <a href="About.html">Contacts</a> </li>
+				<li> Projects </li>
 			</ul>
-		</nav>
+		</div>
 		
 		<p> I'm still sorta alive </p>
 	</body>
