bunch of layouts

--- a/Projects.html
+++ b/Projects.html
@@ -14,6 +14,18 @@
 			</ul>
 		</div>
 		
-		<p> I'm still sorta alive </p>
+		<div class="GridLayout">
+			<ul>
+				<li>
+					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
+				</li>
+				
+				<li>
+					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
+				</li>
+				
+				<li>
+					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
+				</li>
 	</body>
 </html>
