--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</ul>
 		</div>
 		
-		<div class="PageContents">
+		<div class="DynamicArranging">
 			<ul>
 				<li>
 					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
