WikiGame Initial push and basics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 				<li> Home </li>
 				<li> <a href="About.html">Contacts</a> </li>
 				<li> <a href="Projects.html">Projects</a> </li>
+				<li> <a href="WikiGame.html">Wiki Game</a> </li>
 			</ul>
 		</div>
 		
