--- a/About.html
+++ b/About.html
@@ -11,6 +11,7 @@
 				<li> <a href="index.html">Home</a> </li>
 				<li> Contacts </li>
 				<li> <a href="Projects.html">Projects</a> </li>
+				<li> <a href="WikiGame.html">Wiki Game</a> </li>
 			</ul>
 		</div>
 		
