--- a/Projects.html
+++ b/Projects.html
@@ -11,13 +11,14 @@
 				<li> <a href="index.html">Home</a> </li>
 				<li> <a href="About.html">Contacts</a> </li>
 				<li> Projects </li>
+				<li> <a href="WikiGame.html">Wiki Game</a> </li>
 			</ul>
 		</div>
 		
 		<div class="GridLayout">
 			<ul>
 				<li>
-					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
+					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
 				</li>
 				
 				<li>
@@ -25,7 +26,7 @@
 				</li>
 				
 				<li>
-					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
+					<p class="BlockText"> I'm alive longly! I'm alive longly! I'm alive longly! I'm alive longly! </p>
 				</li>
 	</body>
 </html>
