--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <htm>
-    <head> Test</head>
+    <head>
+        <title>Home</title>
+    </head>
     <body>Hello World</body>
 </htm>
