--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+        <Link href="style.css" rel="stylesheet" type="text/css" />
     <head>
         <title>Home</title>
     </head>
-    <body>Hello World
+    <body>
         <div= class="wrapper">
             <div>1</div>
             <div>2</div>
